--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,29 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MinhasAnotacoes" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyNotes" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#8a695e</item>
+        <item name="colorPrimaryVariant">#5c3e34</item>
+        <item name="colorOnPrimary">#8a695e</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#8a695e</item>
+        <item name="colorSecondaryVariant">#8a695e</item>
+        <item name="colorOnSecondary">#cbc995</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.MyNotes.NoBar" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="colorPrimary">#8a695e</item>
+        <item name="colorPrimaryVariant">#5c3e34</item>
+        <item name="colorOnPrimary">#8a695e</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#8a695e</item>
+        <item name="colorSecondaryVariant">#8a695e</item>
+        <item name="colorOnSecondary">#cbc995</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
+
+
 </resources>
