--- a/app/src/main/res/layout/content_note.xml
+++ b/app/src/main/res/layout/content_note.xml
@@ -5,18 +5,31 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:id="@+id/et_title"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="8dp"
+        android:hint="@string/note_tittle"
+        android:inputType="text|textCapSentences"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
         android:id="@+id/et_note"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/white"
-        android:ems="10"
+        android:layout_margin="8dp"
+        android:autofillHints="Nota"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:padding="16dp"
-        android:singleLine="false"
         android:hint="@string/note_hint_text"
+        android:inputType="textMultiLine|textCapSentences"
+        android:singleLine="false"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/et_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
